terraform/prod/eks.tf
#Cluster role
resource "aws_iam_role" "eks-cluster-role" {
  name = "eks-cluster-role"
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "sts:AssumeRole",
          "sts:TagSession"
        ]
        Effect = "Allow"
        Principal = {
          Service = "eks.amazonaws.com"
        }
      },
    ]
  })
}

#Cluster role policy
resource "aws_iam_role_policy_attachment" "eks-cluster-policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.eks-cluster-role.name
}
/*
#EKS cluster
resource "aws_eks_cluster" "workbc-cluster" {
  name = "workbc-cluster"
  access_config {
    authentication_mode = "API_AND_CONFIG_MAP"
  }
  role_arn = aws_iam_role.eks-cluster-role.arn
  vpc_config {
    subnet_ids = data.aws_subnets.app.ids
  }
  depends_on = [
    aws_iam_role_policy_attachment.eks-cluster-policy,
    aws_iam_role.eks-cluster-role,
  ]
}

#EKS cluster addons
resource "aws_eks_addon" "vpc-cni-addon" {
  cluster_name = aws_eks_cluster.workbc-cluster.name
  addon_name   = "vpc-cni"
}

resource "aws_eks_addon" "kube-proxy-addon" {
  cluster_name = aws_eks_cluster.workbc-cluster.name
  addon_name   = "kube-proxy"
}

resource "aws_eks_addon" "pod-identity-addon" {
  cluster_name = aws_eks_cluster.workbc-cluster.name
  addon_name   = "eks-pod-identity-agent"
}

resource "aws_eks_addon" "coredns-addon" {
  cluster_name = aws_eks_cluster.workbc-cluster.name
  addon_name   = "coredns"
}*/

#EFS CSI role
resource "aws_iam_role" "efs-csi-role" {
  name = "efs-csi-role"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = [
          "sts:AssumeRole",
          "sts:TagSession"
        ]
      Effect = "Allow"
      Principal = {
        Service = "pods.eks.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

#EFS CSI policy
resource "aws_iam_role_policy_attachment" "ec-AmazonEFSCSIDriverPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonEFSCSIDriverPolicy"
  role       = aws_iam_role.efs-csi-role.name
}
/*
resource "aws_eks_addon" "aws-efs-csi-driver" {
  cluster_name = aws_eks_cluster.workbc-cluster.name
  addon_name   = "aws-efs-csi-driver"

  pod_identity_association {
    role_arn = aws_iam_role.efs-csi-role.arn
    service_account = "efs-csi-controller-sa"
  }
}*/

#Node group role
resource "aws_iam_role" "eks-ng-role" {
  name = "eks-ng-role"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

#Node group policies
resource "aws_iam_role_policy_attachment" "ng-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.eks-ng-role.name
}

resource "aws_iam_role_policy_attachment" "ng-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.eks-ng-role.name
}

resource "aws_iam_role_policy_attachment" "ng-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.eks-ng-role.name
}
/*
#Node group
resource "aws_eks_node_group" "eks-ng" {
  cluster_name    = aws_eks_cluster.workbc-cluster.name
  node_group_name = "eks-ng"
  node_role_arn   = aws_iam_role.eks-ng-role.arn
  subnet_ids      = data.aws_subnets.app.ids
  
#  launch_template {
#    id      = aws_launch_template.eks_nodes_lt.id
#    version = "$Latest"
#  }

  scaling_config {
    desired_size = 6
    max_size     = 15
    min_size     = 5
  }

  instance_types = ["t3.large"]

  update_config {
    max_unavailable = 1
  }

  # Ensure that IAM Role permissions are created before and deleted after EKS Node Group handling.
  # Otherwise, EKS will not be able to properly delete EC2 Instances and Elastic Network Interfaces.
  depends_on = [
    aws_iam_role_policy_attachment.ng-AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.ng-AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.ng-AmazonEC2ContainerRegistryReadOnly,
  ]
}
*/

#Cluster auto scaler role
resource "aws_iam_role" "cluster_auto_scaler_role" {
  name = "cluster_auto_scaler_role"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = [
          "sts:AssumeRole",
          "sts:TagSession"
        ]
      Effect = "Allow"
      Principal = {
        Service = "pods.eks.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

#Cluster auto scaler policy
resource "aws_iam_role_policy" "cluster_auto_scaler" {
  name   = "cluster_auto_scaler"
  role   = aws_iam_role.cluster_auto_scaler_role.id
  policy = <<-EOF
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Effect": "Allow",
              "Action": [
                  "autoscaling:DescribeAutoScalingGroups",
                  "autoscaling:DescribeAutoScalingInstances",
                  "autoscaling:DescribeLaunchConfigurations",
                  "autoscaling:DescribeTags",
                  "autoscaling:SetDesiredCapacity",
                  "autoscaling:TerminateInstanceInAutoScalingGroup",
                  "ec2:DescribeLaunchTemplateVersions",
                  "ec2:DescribeInstances"
              ],
              "Resource": "*"
          }
      ]
  }
  EOF
}

#Pod identity role
resource "aws_iam_role" "ses_mailer_role" {
  name = "ses_mailer_role"

  assume_role_policy = jsonencode({
    Statement = [{
      Action = [
          "sts:AssumeRole",
          "sts:TagSession"
        ]
      Effect = "Allow"
      Principal = {
        Service = "pods.eks.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}

#Pod identity policy
resource "aws_iam_role_policy" "ses_mailer_policy" {
  name   = "ses_mailer_policy"
  role   = aws_iam_role.ses_mailer_role.id
  policy = <<-EOF
  {
      "Version": "2012-10-17",
      "Statement": [
          {
              "Effect": "Allow",
              "Action": [
                  "ses:SendEmail",
		  "ses:SendRawEmail",
		  "ses:ListIdentities"
              ],
              "Resource": "*"
          },
		  {
      "Effect": "Allow",
      "Action": [
        "s3:ListBucket",
		"s3:GetBucketLocation"
      ],
      "Resource": "${aws_s3_bucket.workbc_s32.arn}"
    },
    {
      "Effect": "Allow",
      "Action": [
	    "s3:GetObjectAttributes",
        "s3:GetObject",
        "s3:PutObject",
        "s3:ListMultipartUploadParts",
        "s3:AbortMultipartUpload"
      ],
      "Resource": "${aws_s3_bucket.workbc_s32.arn}/*"
    },
	{
			  "Effect": "Allow",
			  "Action": [
				  "secretsmanager:GetSecretValue",
				  "secretsmanager:DescribeSecret"
			  ],
			  "Resource": "arn:aws:secretsmanager:${data.aws_region.current.id}:${data.aws_caller_identity.current.account_id}:secret:*"
		  },
		  {
			  "Effect": "Allow",
			  "Action": [
				  "kms:Decrypt"
			  ],
			  "Resource": "arn:aws:kms:${data.aws_region.current.id}:${data.aws_caller_identity.current.account_id}:key/*"
		  }
      ]
  }
  EOF
}
/*
resource "aws_security_group_rule" "allow_alb3" {
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8081
  protocol                 = "tcp"
  security_group_id        = data.aws_security_group.eks_node_sg.id
  source_security_group_id = aws_security_group.alb_sg.id
}*/
